# GlycoConjVacEpitopeMapper

./: .env.example  .gitignore  LICENSE  README.md  allowed_websites.txt  bioinformatician_test_transcript.txt  check_models.py  debug_models.py  environment.yml  get_pdb_4ae1.py  get_real_data.py  inspect_pdb.py  ml_specialist_test_transcript.txt  project_specification.md  push_to_github.ps1  pyproject.toml  reproduction_guide_for_students.md  run_data_audit.py  run_indexing.py  run_pipeline_design.py  run_tier1_diana_coding.py  test_bioinformatician.py  test_ml_specialist.py  validate_trajectory.py  verify_features.py  verify_pipeline.py  verify_real_md.py
.agent/workflows/: run_simulation_pipeline.md
dashboard/: index.html  package-lock.json  package.json
dashboard/public/: data.json
dashboard/src/: App.css  App.jsx  index.css
data/: meeting_transcript_001.txt  meeting_transcript_data_audit.txt  meeting_transcript_pipeline_design.txt
data/tier1_report/: top_candidates.csv
data/training_report/: model_metrics.txt
docs/: grant_application.md  scientific_presentation.md
literature_review/: README.md
literature_review/results/: deduplicated.json  evidence_table.csv  raw_results.json  review_report.md  screened.json  search_log.json
src/agent_schools/: bioinformatician_curriculum.yaml  computational_chemist_curriculum.yaml  glyco_immunologist_curriculum.yaml  ml_specialist_curriculum.yaml  prompts.py  retrieval.py  run_school.py  vector_store.py
src/virtual_lab/: __about__.py  __init__.py  (+10 more)
tests/: test_bioinformatician.py  test_ml_specialist.py
(+50 files in other folders)
